# slack_analytics

./: .gitignore  AGENTS.md  README.md  Slack Data EDA.ipynb  app.py  pyproject.toml  requirements.txt
plans/: slack-analytics-rebuild-plan.md
src/slackalytics/: __init__.py  cli.py  config.py  dashboard.py  db.py  doctor.py  emojis.py  ingest.py  people.py
tests/: test_config.py  test_emojis.py  test_ingest_helpers.py  test_marimo_smoke.py
