[project]
name = "slackalytics"
version = "0.1.0"
description = "Local-first analytics for Slack export snapshots."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "altair>=6.0.0",
  "duckdb",
  "emoji>=2.15.0",
  "marimo",
  "pandas",
  "typer",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
slackalytics = "slackalytics.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slackalytics"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
